<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Main Content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.media3.ui.PlayerView
            android:id="@+id/playerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_RoomID"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:text="@string/etRoomIDField"
                    android:textColor="#546E7A" />

                <EditText
                    android:id="@+id/et_urlfield"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:hint="@string/etUrlFieldHint"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="#546E7A" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_Play"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/btnLoadPlay" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Drawer Section -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:paddingTop="5dp"

        >

        <!-- RecyclerView for Sidebar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/usersCountLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|end"
                    android:text="perferc" />

                <TextView
                    android:id="@+id/usersCountInRoom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": 20" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/delayHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_DelayHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvDelayHint" />

                <EditText
                    android:id="@+id/et_Delay"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="500" />

            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_sidebar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:padding="16dp"
                tools:listitem="@layout/users_list_view" />
        </LinearLayout>


    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
